--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import '~leaflet/dist/leaflet.css'; */
 
 nextjs-portal {
   display: none;
+}
+
+
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
 }
 
 /* *=========== Default theme =========== */
